--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -61,7 +61,7 @@
 						data-toggle="dropdown" role="button" aria-haspopup="true"
 						aria-expanded="false">护理内容 <span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="/SupportCenter/addCareContent.jsp">增加护理内容</a></li>
+							<li><a href="/SupportCenter//LevelQueryAddController">增加护理内容</a></li>
 							<li><a href="/SupportCenter/query.jsp">查询护理内容</a></li>
 						</ul>
 					</li>
